<resources>
    <string name="app_name">Books</string>
    <string name="app_version">1.0.0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="emailHint">Your email address…</string>
    <string name="passwordHint">Your password…</string>
    <string name="btn_sing_in">SIGN IN</string>
    <string name="about">Developed by @JuDaOcVa \n 2024</string>
    <string name="incorrect_creedentials_msj">Incorrect Credentials</string>
    <string name="email_required_msj">Email is required</string>
    <string name="password_required_msj">Password is required</string>
    <string name="createAppKey_endpoint">createAppkey</string>
    <string name="createOauthkey_endpoint">createOauthkey</string>
    <string name="createSesskey_endpoint">createSesskey</string>
    <string name="getAllBooks_endpoint">getAllBooks</string>
    <string name="timetonic_url">https://timetonic.com/</string>
    <string name="logout">Logout</string>
    <string name="book_image">Book Image</string>

</resources>